--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -14,3 +14,4 @@ serviceAccountKey.json
 
 # PDF and other large files
 *.pdf
+backend/wordlearningapp-b4360-firebase-adminsdk-tvj6y-82e3ae1618.json
