--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -16,3 +16,4 @@ serviceAccountKey.json
 *.pdf
 backend/wordlearningapp-b4360-firebase-adminsdk-tvj6y-82e3ae1618.json
 backend/wordlearningapp-b4360-firebase-adminsdk-tvj6y-82e3ae1618.json
+backend/wordlearningapp-b4360-firebase-adminsdk-tvj6y-82e3ae1618.json
